--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: http://example.org/
 languageCode: en-us
-title: DTU AI Info Hub
+title: DTU AI Info Hub (DRAFT)
 theme: ["PaperMod"]
 
 menu:
