--- a/hugo.yaml
+++ b/hugo.yaml
@@ -2,6 +2,7 @@ baseURL: https://dtu-ai-cogsys-7820b875344ad43f0e3337e94e82acfe63ff84d15093011c2
 languageCode: en-us
 title: DTU AI Info Hub (DRAFT)
 theme: ["PaperMod"]
+hiddenInHomeList: true
 
 menu:
   main:
@@ -25,3 +26,28 @@ menu:
       identifier: Rules
       url: /rules
       weight: 50
+    - name: Search
+      identifier: search
+      url: /search
+      weight: 60
+    - name: Tags
+      identifier: tags
+      url: /tags
+      weight: 70
+
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON # necessary for search
+
+params:
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    # limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
+    keys: ["title", "permalink", "summary", "content"]
