--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://dtu-ai-cogsys-7820b875344ad43f0e3337e94e82acfe63ff84d15093011c2.pages.compute.dtu.dk
+baseURL: https://www.ai.dtu.dk
 languageCode: en-us
 title: DTU AI Info Hub (DRAFT)
 theme: ["PaperMod"]
